--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -123,6 +123,8 @@
     title: PPO
   - local: prm_trainer
     title: PRM
+  - local: rtpo_trainer
+    title: RTPO
   - local: winrate_callback
     title: WinRateCallback
   - local: xpo_trainer
