baseline without on policy correction
Signed-off-by: Christian Munley <cmunley@nvidia.com>

--- a/examples/scripts/nemo_gym/config.yaml
+++ b/examples/scripts/nemo_gym/config.yaml
@@ -1,8 +1,7 @@
 model_name: "Qwen/Qwen3-4B-Instruct-2507"
 dataset_path: "train-workplace.jsonl"
 
-task: "workplace-assistant"  # used in run_name if not set
-agent_name: "simple_agent"
+task: "workplace-assistant"  # used in wandb run_name if not set explicitly
 
 output_dir: "outputs/trl_nemo_gym_workplace"
 project_name: "cmunley-nemo-gym-trl-int"
@@ -10,8 +9,6 @@ project_name: "cmunley-nemo-gym-trl-int"
 learning_rate: 1.0e-5
 max_steps: 1000000
 
-# these params are confusing! i just want to set responses per prompt (num_generations), prompts per step, and global batch size like Nemo RL.
-# i think the below is doing: rpp 16, pps 8, gbs 128
 num_generations: 16
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 128
