Add HICRA (Hierarchy-Aware Credit Assignment) trainer
This PR implements HICRA, a novel RL algorithm that enables LLMs to develop
hierarchical reasoning capabilities by amplifying learning signals for strategic
planning tokens.

Key features:
- HICRATrainer extending GRPOTrainer with advantage modification
- Strategic Gram utilities for identifying planning tokens
- Comprehensive test suite with 37+ tests
- Documentation and example scripts
- Full compatibility with existing TRL features (PEFT, distributed training, etc.)

Implementation follows the VeRL reference (TIGER-AI-Lab/Hierarchical-Reasoner)
and the paper 'Emergent Hierarchical Reasoning in LLMs through Reinforcement
Learning' (arXiv:2509.03646).

Changes:
- Add HICRAConfig extending GRPOConfig
- Add HICRATrainer with VeRL-based advantage modification
- Add Strategic Gram extraction and matching utilities
- Add comprehensive test suite (unit, integration, validation)
- Add documentation and example scripts
- Update README and exports

--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -17,6 +17,8 @@
     title: DPO
   - local: grpo_trainer
     title: GRPO
+  - local: hicra_trainer
+    title: HICRA
   - local: reward_trainer
     title: Reward
   - local: rloo_trainer
