Temporarily set packaging==20.0

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -240,6 +240,7 @@ jobs:
           uv pip install accelerate==1.4.0
           uv pip install datasets==3.0.0
           uv pip install transformers==4.56.2
+          uv pip install packaging==20.0
 
       - name: Test with pytest
         run: |
