--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -80,6 +80,16 @@ jobs:
           source .venv/bin/activate
           uv pip install ".[dev]"
 
+      - name: Periodic health log
+        run: |
+          (while true; do
+            echo "== health $(date -Is) ==";
+            free -h || true;
+            df -h || true;
+            ps -eo pid,ppid,cmd,%mem,%cpu --sort=-%mem | head -n 15 || true;
+            sleep 30;
+          done) &
+
       - name: Test with pytest
         run: |
           source .venv/bin/activate
