--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -80,20 +80,31 @@ jobs:
           source .venv/bin/activate
           uv pip install ".[dev]"
 
-      - name: Periodic health log
-        run: |
-          (while true; do
-            echo "== health $(date -Is) ==";
-            free -h || true;
-            df -h || true;
-            ps -eo pid,ppid,cmd,%mem,%cpu --sort=-%mem | head -n 15 || true;
-            sleep 30;
-          done) &
-
       - name: Test with pytest
         run: |
+          set -euo pipefail
+          ( while true; do
+              echo "== health $(date -Is) =="
+              echo "-- uname/uptime --"
+              uname -a || true
+              uptime || true
+              echo "-- mem --"
+              free -h || true
+              echo "-- disk --"
+              df -h || true
+              echo "-- top mem procs --"
+              ps -eo pid,ppid,cmd,%mem,%cpu --sort=-%mem | head -n 15 || true
+              echo
+              sleep 30
+            done
+          ) &
+          HEALTH_PID=$!
+          echo "Health logger PID: $HEALTH_PID"
+
           source .venv/bin/activate
           make test
+
+          kill "$HEALTH_PID" 2>/dev/null || true
 
       - name: Post to Slack
         if: github.ref == 'refs/heads/main' && always()  # Check if the branch is main
