Add pytest-datadir as test dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ scikit = [
 ]
 test = [
     "pytest-cov",
+    "pytest-datadir",
     "pytest-rerunfailures==15.1",
     "pytest-xdist",
     "pytest"
@@ -116,6 +117,7 @@ dev = [
     # scikit: included in bco
     # test
     "pytest-cov",
+    "pytest-datadir",
     "pytest-rerunfailures==15.1",
     "pytest-xdist",
     "pytest",
