--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,7 @@ scikit = [
 ]
 test = [
     "pytest-cov",
-    "pytest-datadir",
+    "pytest-datadir>=1.7.0",  # lazy datadirs
     "pytest-rerunfailures==15.1",
     "pytest-xdist",
     "pytest"
@@ -117,7 +117,7 @@ dev = [
     # scikit: included in bco
     # test
     "pytest-cov",
-    "pytest-datadir",
+    "pytest-datadir>=1.7.0",  # lazy datadirs
     "pytest-rerunfailures==15.1",
     "pytest-xdist",
     "pytest",
