Run experimental tests

--- a/.github/workflows/tests-experimental.yml
+++ b/.github/workflows/tests-experimental.yml
@@ -6,6 +6,9 @@ on:
       # Run only when relevant files are modified
       - "trl/experimental/**"
       - "tests/experimental/**"
+  push:
+    branches:
+      - ci-*
 
 env:
   TQDM_DISABLE: 1
