improve docs, rename train script
Signed-off-by: cmunley1 <cmunley@nvidia.com>

--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -117,6 +117,8 @@
     title: MiniLLM
   - local: nash_md_trainer
     title: Nash-MD
+  - local: nemo_gym
+    title: NeMo Gym
   - local: online_dpo_trainer
     title: Online DPO
   - local: orpo_trainer
