--- a/examples/scripts/nemo_gym/config.yaml
+++ b/examples/scripts/nemo_gym/config.yaml
@@ -15,7 +15,7 @@ max_steps: 1000
 num_generations: 8
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 8
-max_seq_length: 16384
+max_completion_length: 16384
 warmup_steps: 5
 lr_scheduler_type: "linear"
 optim: "adamw_torch_fused"
