--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -31,6 +31,8 @@
     title: Training using Jobs
   - local: customization
     title: Customizing the Training
+  - local: chat_template_for_training
+    title: Updating Chat Templates for Assistant-Only Loss
   - local: reducing_memory_usage
     title: Reducing Memory Usage
   - local: speeding_up_training
