--- a/examples/scripts/nemo_gym/config.yaml
+++ b/examples/scripts/nemo_gym/config.yaml
@@ -1,8 +1,11 @@
-model_name: "Qwen/Qwen3-4B-Instruct-2507"
+# Model
+model_name: "Qwen/Qwen2.5-1.5B-Instruct"
 
-dataset_path: "/path/to/data/train.jsonl"
-eval_dataset_path: "/path/to/data/val.jsonl"
+# Data
+dataset_path: "/home/ubuntu/Gym/resources_servers/workplace_assistant/data/train.jsonl"
+eval_dataset_path: "/home/ubuntu/Gym/resources_servers/workplace_assistant/data/validation.jsonl"
 
+# Logging
 output_dir: "outputs/nemo_gym"
 task: "workplace"                # just used in wandb run name 
 report_to: "wandb"
@@ -10,6 +13,7 @@ project_name: "trl-nemo-gym"
 log_completions: true
 num_completions_to_print: 2
 
+# Training hyperparameters
 learning_rate: 1.0e-5
 max_steps: 1000
 num_generations: 8
@@ -22,11 +26,12 @@ optim: "adamw_torch_fused"
 weight_decay: 0.0
 vllm_importance_sampling_correction: true
 
+# Inference sampling parameters
 temperature: 1.0
 top_p: 0.999
 
+# Checkpointing and Eval
 save_steps: 10
-
 eval_strategy: "steps"
 eval_steps: 10
 
