--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -127,6 +127,8 @@
     title: PPO
   - local: prm_trainer
     title: PRM
+  - local: sdft_trainer
+    title: SDFT
   - local: winrate_callback
     title: WinRateCallback
   - local: xpo_trainer
