--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,8 @@ bco = [
     "joblib"
 ]
 deepspeed = [
-    "deepspeed>=0.14.4"
+    "deepspeed>=0.14.4",
+    "transformers!=5.1.0",  # see transformers#43780
 ]
 judges = [
     "openai>=1.23.2",
@@ -100,6 +101,7 @@ dev = [
     "joblib",
     # deepspeed
     "deepspeed>=0.14.4",
+    "transformers!=5.1.0",  # see transformers#43780
     # judges
     "openai>=1.23.2",
     "llm-blender>=0.0.2",
