--- a/pyproject.toml
+++ b/pyproject.toml
@@ -171,6 +171,6 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "low_priority: marks tests as low priority (deselect with '-m \"not low_priority\"')"
 ]
-addopts = [
-    "-k", "not experimental",
+norecursedirs = [
+    "tests/experimental",
 ]
