feat: add privileged GKD trainer and OPSD smoke logs

--- a/docs/source/_toctree.yml
+++ b/docs/source/_toctree.yml
@@ -127,6 +127,8 @@
     title: PAPO
   - local: ppo_trainer
     title: PPO
+  - local: privileged_gkd_trainer
+    title: Privileged GKD
   - local: prm_trainer
     title: PRM
   - local: winrate_callback
