--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,7 +159,7 @@ extend-select = ["E", "F", "I", "W", "UP", "B", "T", "C"]
 # Allow prints in auxiliary scripts
 "examples/**.py" = ["T201"]
 "scripts/**.py" = ["T201"]
-"trl/cli.py" = ["T201"]
+"trl/cli/**.py" = ["T201"]
 "trl/skills/cli.py" = ["T201"]
 # Ignore import violations in all `__init__.py` files.
 "__init__.py" = ["F401"]
